fix html encoding

--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>TeX Math Here</title>
     <script src="jquery-3.3.1.min.js"></script>
     <script src="popup.js"></script>
