--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <html lang="en">
     <title>TeX Math Here</title>
     <script src="jquery-3.3.1.min.js"></script>
     <script src="popup.js"></script>
@@ -15,7 +16,7 @@
 
 
     <form id="form">
-      <textarea class="TeX" id="code" rows="4" cols="50">ax^2 + bx + c</textarea>
+      <textarea class="TeX" id="code" rows="4" cols="52">ax^2 + bx + c</textarea>
       <br/>
 
       <select class="fonts" id="font" title="Font">
@@ -45,7 +46,7 @@
 		    <option value="960">96pt</option>
       </select>
 
-      <input type="color" id="color" style="width:15%;">
+      <input type="color" id="color" style="width:15%">
 
       <div id="fontLabel" style="font-size:10px;"></div>
 
@@ -70,6 +71,8 @@
         Preview (automatically copies to clipboard)</p>
     </h3>
 
+    <img id="result"></img>
+    <p id="error"></img>
 
     <br/>
   </body>
