fix init message

--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,7 @@
 
 
     <form id="form">
-      <textarea class="TeX" id="code" rows="4" cols="52">ax^2 + bx + c</textarea>
+      <textarea class="TeX" id="code" rows="4" cols="52">Enter code here</textarea>
       <br/>
 
       <select class="fonts" id="font" title="Font">
