--- a/popup.html
+++ b/popup.html
@@ -5,25 +5,26 @@
     <html lang="en">
     <title>TeX Math Here</title>
     <script src="jquery-3.3.1.min.js"></script>
+    <script src="jscolor.js"></script>
     <script src="popup.js"></script>
     <link rel="stylesheet" type="text/css" href="popup.css">
   </head>
   <body>
     <h3>
-      <p class="disable-select" style="font-family:helvetica,verdana,arial;font-size:16px;">Enter
-        T<sub>E</sub>X math code: do not enclose in $ $ or \[ \]</p>
+      <p class="disable-select"
+         style="font-family:helvetica,verdana,arial;font-size:16px;">
+        Enter T<sub>E</sub>X math code: do not enclose in $ $ or \[ \]</p>
     </h3>
 
 
     <form id="form">
-      <textarea class="TeX" id="code" rows="4" cols="52">Enter code here</textarea>
-      <br/>
+      <textarea class="TeX" id="code" rows="4" cols="52"
+      style="resize:none">Enter code here</textarea> <br/>
 
-      <select class="fonts" id="font" title="Font">
-      </select>
+      <select class="fonts" id="font"></select>
 
       <!--value corresponds to dpi (10 * the pt size value) -->
-      <select class="fontSize" id="DPI" title="Font size" >
+      <select class="fontSize" id="DPI" title="Font size">
         <option value="80">8pt</option>
 		    <option value="90">9pt</option>
 		    <option value="100">10pt</option>
@@ -31,7 +32,7 @@
 		    <option value="120">12pt</option>
 		    <option value="140">14pt</option>
 		    <option value="160">16pt</option>
-		    <option value="180">18pt</option>
+        <option value="180" selected>18pt</option>
 		    <option value="200">20pt</option>
 		    <option value="220">22pt</option>
 		    <option value="240">24pt</option>
@@ -46,29 +47,13 @@
 		    <option value="960">96pt</option>
       </select>
 
-      <input type="color" id="color" style="width:15%">
+      <input class="jscolor" id="color"
+             style="width:15%;font-size:14px;text-align:center">
+             <!-- value="000000" -->
+
 
       <div id="fontLabel" style="font-size:10px;"></div>
 
-      <br />
-      <table class="disable-select"
-             style="font-family:helvetica,verdana,arial;font-size:11px;padding=20px">
-        <tr>
-          <td><input type="number" title="Red" id="red" min="0" max="255"
-          value="0"></td>
-          <td><input type="number" title="Green" id="green" min="0" max="255"
-          value="0"></td>
-          <td><input type="number" title="Blue" id="blue" min="0" max="255"
-          value="0"></td>
-        </tr>
-        <tr>
-          <td>Red (0-255)</td>
-          <td>Green (0-255)</td>
-          <td>Blue (0-255)</td>
-        </tr>
-      </table>
-
-    <!-- DPI: <input type="number" id="DPI" value="300" width="1" />-->
     <br />
     <button type="submit" id="submitButton">Convert</button>
     </form>
