When image is large, only scroll the image area

--- a/popup.html
+++ b/popup.html
@@ -69,6 +69,7 @@
         Preview (automatically copies to clipboard)</p>
     </h3>
 
-    <img id="result"></img>
+		<div id="displayarea" style="width:400px;height:140px;overflow:auto;">
+		</div>
   </body>
 </html>
