--- a/popup.html
+++ b/popup.html
@@ -68,8 +68,7 @@
       <p style="font-family:helvetica,verdana,arial;font-size:16px;">
         Preview (automatically copies to clipboard)</p>
     </h3>
-
-		<div id="displayarea" style="width:400px;height:140px;overflow:auto;">
-		</div>
+		<div style="display:none;" id="loader" class="loader"></div>
+		<div id="displayarea" style="width:400px;height:140px;overflow:auto;"></div>
   </body>
 </html>
