Load DPI options from server

--- a/popup.html
+++ b/popup.html
@@ -29,29 +29,7 @@
 
       <select class="fonts" id="font"></select>
 
-      <!--value corresponds to dpi (10 * the pt size value) -->
-      <select class="fontSize" id="DPI">
-        <option value="80">8pt</option>
-		    <option value="90">9pt</option>
-		    <option value="100">10pt</option>
-		    <option value="110">11pt</option>
-		    <option value="120">12pt</option>
-		    <option value="140">14pt</option>
-		    <option value="160">16pt</option>
-        <option value="180" selected>18pt</option>
-		    <option value="200">20pt</option>
-		    <option value="220">22pt</option>
-		    <option value="240">24pt</option>
-		    <option value="260">26pt</option>
-		    <option value="280">28pt</option>
-		    <option value="300">30pt</option>
-		    <option value="360">36pt</option>
-		    <option value="420">42pt</option>
-		    <option value="480">48pt</option>
-		    <option value="600">60pt</option>
-		    <option value="720">72pt</option>
-		    <option value="960">96pt</option>
-      </select>
+      <select class="fontSize" id="DPI"></select>
 
       <input class="jscolor" id="color"
              spellcheck="false"
