Make extension size relative for Chromium
This way, the extension textbox does not float out of range.

--- a/popup.html
+++ b/popup.html
@@ -21,7 +21,7 @@
 		</p>
 
     <form id="form">
-      <textarea id="code" rows="4" cols="53"
+      <textarea id="code" rows="4" cols="54"
 								class="TeX"
 								title="Enter TeX here"
 								style="resize:none" spellcheck="false">Enter code here</textarea>
@@ -34,7 +34,7 @@
       <input class="jscolor" id="color"
              spellcheck="false"
              title="Enter the hexadecimal RGB representation of your color here, or click to select a color."
-             style="width:15%;font-size:14px;text-align:center"
+             style="width:50px;font-size:14px;text-align:center"
              value="000000">
 
 			<input type="checkbox" id="displaystyle" checked>
@@ -49,6 +49,6 @@
         Preview (automatically copies to clipboard)</p>
     </h3>
 		<div style="display:none;" id="loader" class="loader"></div>
-		<div id="displayarea" style="width:400px;height:140px;overflow:auto;"></div>
+		<div id="displayarea" style="width:100%;height:140px;overflow:auto;"></div>
   </body>
 </html>
