Put up with Chromium strangeness

--- a/popup.html
+++ b/popup.html
@@ -49,6 +49,6 @@
         Preview (automatically copies to clipboard)</p>
     </h3>
 		<div style="display:none;" id="loader" class="loader"></div>
-		<div id="displayarea" style="width:100%;height:140px;overflow:auto;"></div>
+		<div id="displayarea" style="width:100%;min-height:100px;overflow:auto;"></div>
   </body>
 </html>
