Add basic format options handlers

--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,7 @@
 	  </center>
 
 		<p style="font-family:helvetica,verdana,arial;font-size:12px;margin:5px">
-			(Do not enclose code in  $ $ or \[ \].)
+			(Do not enclose code in  $ $ or \[ \].) <select class="fontSize" id="format"></select>
 		</p>
 
     <form id="form">
