--- a/popup.html
+++ b/popup.html
@@ -45,8 +45,7 @@
     </form>
 
     <h3>
-      <p style="font-family:helvetica,verdana,arial;font-size:16px;">
-        Preview (automatically copies to clipboard)</p>
+      <p style="font-family:helvetica,verdana,arial;font-size:16px;">Preview<span id="clipboardstatus" style="display:none;font-size:10px">(copied to clipboard)</span></p>
     </h3>
 		<div style="display:none;" id="loader" class="loader"></div>
 		<div id="displayarea" style="width:100%;min-height:100px;overflow:auto;"></div>
