Add Wikimedia LaTeX reference link

--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,8 @@
 	  </center>
 
 		<p style="font-family:helvetica,verdana,arial;font-size:12px;margin:5px">
-			(Do not enclose code in  $ $ or \[ \].) <select class="fontSize" id="format"></select>
+			(Enter <a href="https://en.wikipedia.org/wiki/Help:Displaying_a_formula#Formatting_using_TeX">math code</a> only. Do not enclose in  $ $ or \[ \].)
+			<select class="fontSize" id="format"></select>
 		</p>
 
     <form id="form">
