Add space for selector

--- a/popup.html
+++ b/popup.html
@@ -18,6 +18,7 @@
 
 		<p style="font-family:helvetica,verdana,arial;font-size:12px;margin:5px">
 			(Enter <a href="https://en.wikipedia.org/wiki/Help:Displaying_a_formula#Formatting_using_TeX">math code</a> only. Do not enclose in  $ $ or \[ \].)
+			<span style="display:inline-block; width:5px;"></span>
 			<select class="fontSize" id="format"></select>
 		</p>
 
