Put math delimiters in typewriter font

--- a/popup.html
+++ b/popup.html
@@ -16,8 +16,8 @@
 					 id="logo" alt="TeX Math Here">
 	  </center>
 
-		<p style="font-family:helvetica,verdana,arial;font-size:12px;margin:5px">
-			(Enter <a href="https://en.wikipedia.org/wiki/Help:Displaying_a_formula#Formatting_using_TeX">math code</a> only. Do not enclose in  $ $ or \[ \].)
+		<p style="font-family:helvetica,verdana,arial;font-size:11px;margin:5px">
+			(Enter <a href="https://en.wikipedia.org/wiki/Help:Displaying_a_formula#Formatting_using_TeX">math code</a> only. Do not enclose in  <tt>$</tt> <tt>$</tt> or <tt>\[</tt> <tt>\]</tt>.)
 			<span style="display:inline-block; width:5px;"></span>
 			<select class="fontSize" id="format"></select>
 		</p>
