Update displaystyle checkbox

--- a/popup.html
+++ b/popup.html
@@ -39,8 +39,11 @@
              style="width:50px;font-size:14px;text-align:center"
              value="000000">
 
-			<input type="checkbox" id="displaystyle" checked>
-			<label for="displaystyle" style="font-size:10px"><tt>\displaystyle</tt></label>
+			<input type="checkbox" id="displaystyle" class="check-input" checked>
+			<label for="displaystyle" class="check-label"
+						 title="When checked, force the LaTeX \displaystyle equation format, rather than inline display.">
+				<tt>\displaystyle</tt>
+			</label>
       <div id="fontLabel" style="font-size:10px;"></div>
 
 			<button type="submit" id="submitButton"
